fix scrollbar display issue

--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -83,7 +83,8 @@
   .section-content-wrapper
     padding-top: $header-height
     max-height: 100%
-    overflow: scroll
+    overflow: auto
+    overflow-x: hidden
 
   .section-close-holder
     display: block
